# badiso

./: README.md  badiso.cabal  badiso.py  ddrescueprint.hs  lba.py
